uploaded and linked all projects done by odin project

--- a/index.html
+++ b/index.html
@@ -11,5 +11,40 @@
 </head>
 <body>
   <h1 id="name">Addison Young's Projects</h1>
+
+  <div class="outer">
+     <div class="project">
+    <a href="https://freezee10.github.io/calculator_pt2/">Calculator</a>
+  </div>
+
+  <div class="project">
+    <a href="https://freezee10.github.io/rrock-paper-scissors/">RPS</a>
+  </div>
+
+  <div class="project">
+    <a href="https://freezee10.github.io/etch-a-sketch/">Draw</a>
+  </div>
+
+  <div class="project">
+    <a href="https://freezee10.github.io/landing-page/">Demon Slayer</a>
+  </div>
+
+  <div class="project">
+    <a href="https://freezee10.github.io/tic__tac_toe/">Tic Tac Toe</a>
+  </div>
+
+  <div class="project">
+    <a href="https://freezee10.github.io/library/">Library</a>
+  </div>
+
+  <div class="project">
+    <a>Project</a>
+  </div>
+
+  <div class="project">
+    <a>Project</a>
+  </div>
+  </div>
+ 
 </body>
 </html>
