--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
   </div>
 
   <div class="project">
-    <a href="https://freezee10.github.io/rrock-paper-scissors/">RPS</a>
+    <a href="https://addisonwyoung.github.io/rrock-paper-scissors/">RPS</a>
   </div>
 
   <div class="project">
-    <a href="https://freezee10.github.io/etch-a-sketch/">Draw</a>
+    <a href="https://addisonwyoung.github.io/etch-a-sketch/">Draw</a>
   </div>
 
   <div class="project">
-    <a href="https://freezee10.github.io/landing-page/">Demon Slayer</a>
+    <a href="https://addisonwyoung.github.io/landing-page/">Demon Slayer</a>
   </div>
 
   <div class="project">
-    <a href="https://freezee10.github.io/tic__tac_toe/">Tic Tac Toe</a>
+    <a href="https://addisonwyoung.github.io/tic__tac_toe/">Tic Tac Toe</a>
   </div>
 
   <div class="project">
-    <a href="https://freezee10.github.io/library/">Library</a>
+    <a href="https://addisonwyoung.github.io/library/">Library</a>
   </div>
 
   <div class="project">
