--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <div class="outer">
      <div class="project">
-    <a href="https://freezee10.github.io/calculator_pt2/">Calculator</a>
+    <a href="https://addisonwyoung.github.io/calculator_pt2/">Calculator</a>
   </div>
 
   <div class="project">
